--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sodium-native",
+  "name": "sodium-native-nodejs-mobile",
   "version": "3.1.1",
   "description": "Low level bindings for libsodium",
   "main": "index.js",
