--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "description": "Low level bindings for libsodium",
   "main": "index.js",
   "dependencies": {
+    "bindings": "~1.3.0",
     "ini": "^1.3.5",
-    "node-gyp-build": "^4.2.0"
+    "prebuild-install": "^5.0.0"
   },
   "devDependencies": {
-    "prebuildify": "^4.0.0",
+    "node-gyp": "^3.6.1",
+    "node-gyp-build": "^4.2.0",
+    "prebuild": "8.0.1",
+    "prebuild-ci": "^2.0.0",
     "sodium-test": "^0.8.0",
     "sodium-vectors": "^1.0.0",
     "standard": "^14.3.1",
     "tape": "^4.13.0"
   },
+  "engines": {
+    "node": ">=8"
+  },
   "scripts": {
     "dev": "node-gyp rebuild",
     "fetch-libsodium": "git submodule update --recursive --init",
     "test": "standard && tape \"test/*.js\"",
-    "install": "node-gyp-build \"node preinstall.js\" \"node postinstall.js\"",
-    "prebuild": "prebuildify --napi --strip --preinstall \"node preinstall.js\" --postinstall \"node postinstall.js\"",
-    "prebuild-ia32": "prebuildify --arch=ia32 --napi --strip --preinstall \"node preinstall.js\" --postinstall \"node postinstall.js\""
+    "install": "node-gyp-build \"node preinstall.js\" \"node postinstall.js\""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sodium-friends/sodium-native.git"
+    "url": "https://github.com/calm-rad/sodium-native.git"
   },
   "contributors": [
     "Emil Bay <github@tixz.dk> (http://bayes.dk)",
@@ -33,7 +38,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sodium-friends/sodium-native/issues"
+    "url": "https://github.com/calm-rad/sodium-native/issues"
   },
-  "homepage": "https://github.com/sodium-friends/sodium-native"
+  "homepage": "https://github.com/calm-rad/sodium-native"
 }
