--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dev": "node-gyp rebuild",
     "fetch-libsodium": "git submodule update --recursive --init",
     "test": "standard && tape \"test/*.js\"",
-    "install": "node-gyp-build \"node preinstall.js\""
+    "install": "node-gyp-build \"node preinstall.js\" \"node postinstall.js\""
   },
   "repository": {
     "type": "git",
